# mongodb-with-fastapi

./: .gitignore  app.py  docker-compose.yaml  pyproject.toml
