[tool.poetry]
name = "mongodb-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mongodb_with_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pymongo = "^4.5.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
motor = "^3.3.1"
requests = "^2.31.0"
PyYAML = "^6.0.1"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
